--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "concurrently": "^8.2.2",
     "tailwindcss": "^3.4.3"
   },
+  "scripts": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject"
+},
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
