--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "node server.js",
     "server": "node server.js",
     "frontend": "npm start --prefix ./frontend",
-    "dev": "concurrently \"npm run server\" \"npm run frontend\"",
+    "dev": "concurrently \"npm run server\" \"npm start --prefix ./frontend\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -20,12 +20,6 @@
     "concurrently": "^8.2.2",
     "tailwindcss": "^3.4.3"
   },
-  "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-},
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
