--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "server": "nodemon server.js",
+    "server": "nodemon ./server/server.js",
     "frontend": "npm start --prefix ./frontend",
     "dev": "concurrently \"npm run server \" \"npm run frontend\""
   },
