--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,10 @@
 
-PORT = 8081
+PORT = 80
 url = 'mongodb+srv://123:456@cluster0.wued4s8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 JWT_SECRET = HF378STY57OLMNF58H
+
+
+
+ AZURE_OPENAI_ENDPOINT = "https://tourismlocal.openai.azure.com/";
+ AZURE_OPENAI_API_KEY = "e41c88740e9d40f9aec7da9a1953f746";
+
