frontend deploy scripts added

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node server.js",
     "server": "nodemon ./server/server.js",
     "frontend": "npm start --prefix ./frontend",
+    "install": "npm install --prefix ./frontend",
+    "build": "npm run build --prefix ./frontend",
     "dev": "concurrently \"npm run server \" \"npm run frontend\""
   },
   "devDependencies": {
