--- a/frontend/.env
+++ b/frontend/.env
@@ -2,3 +2,4 @@
 url = 'mongodb+srv://123:456@cluster0.wued4s8.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
 JWT_SECRET = HF378STY57OLMNF58H
 REACT_APP_SERVER_URL = https://tourmitr-fqcsdqbra7c7fcb6.southindia-01.azurewebsites.net/
+# REACT_APP_SERVER_URL = ""
